# ElectronBot

./: .gitignore  README.md  enREADME.md
1.Hardware/BaseConnector/: BaseConnector.PcbDoc  BaseConnector.PrjPCB  Main.SchDoc
1.Hardware/BaseConnector/Gerber/: BaseConnector-RoundHoles.TXT  BaseConnector-SlotHoles.TXT  BaseConnector-macro.APR_LIB  BaseConnector.DRR  BaseConnector.EXTREP  BaseConnector.GBL  BaseConnector.GBO  BaseConnector.GBP  BaseConnector.GBS  BaseConnector.GD1  BaseConnector.GG1  BaseConnector.GKO  BaseConnector.GM1  BaseConnector.GM10  BaseConnector.GM13  BaseConnector.GM14  BaseConnector.GM15  BaseConnector.GPB  BaseConnector.GPT  BaseConnector.GTL  BaseConnector.GTO  BaseConnector.GTP  BaseConnector.GTS  BaseConnector.LDP  BaseConnector.REP  BaseConnector.RUL  BaseConnector.apr  Status Report.Txt
1.Hardware/ElectronBot/: ElectronBot.PrjPCB  Main.SchDoc
1.Hardware/ElectronBot/Gerber/: ElectronBot-macro.APR_LIB  ElectronBot.DRR  ElectronBot.EXTREP  ElectronBot.GBL  ElectronBot.GBO  ElectronBot.GBP  ElectronBot.GBS  ElectronBot.GD1  ElectronBot.GG1  ElectronBot.GKO  ElectronBot.GM1  ElectronBot.GM10  ElectronBot.GM12  ElectronBot.GM13  ElectronBot.GM14  ElectronBot.GM15  ElectronBot.GPB  ElectronBot.GPT  ElectronBot.GTL  ElectronBot.GTO  (+8 more)
1.Hardware/SensorBoard/: Main.SchDoc  SensorBoard.PcbDoc  SensorBoard.PrjPCB  SensorBoard.PrjPCBStructure
1.Hardware/ServoDrive/: Main.SchDoc  ServoDrive.PcbDoc  ServoDrive.PrjPCB
1.Hardware/ServoDrive-DK/: Main.SchDoc  ServoDrive-DK.PcbDoc  ServoDrive-DK.PrjPCB
2.Firmware/ElectronBot-fw/: .cproject  .mxproject  .project  CMakeLists.txt  ElectronBot-fw.ioc  ElectronBot-fw.xml  STM32F405RGTx_FLASH.ld  stlink.cfg
2.Firmware/ServoDrive-fw/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F042F6Px_FLASH.ld  ServoDrive-fw.ioc  stlink.cfg
2.Firmware/ServoDrive-fw-ll/: .mxproject  ServoDrive-fw.ioc  ServoDrive-fw.xml  platformio.ini  readme.md
3.Software/SDK/ElectronBotSDK-Player/: CMakeLists.txt
3.Software/SDK/ElectronBotSDK-Player/lib/: electron_low_level.h
3.Software/SDK/ElectronBotSDK-Player/src/: electron_player.cpp  electron_player.h  sample.cpp
3.Software/SDK/ElectronBotSDK-UnityBridge/: CMakeLists.txt
3.Software/SDK/ElectronBotSDK-UnityBridge/lib/: ElectronBotSDK-LowLevel.lib
3.Software/SDK/ElectronBotSDK-UnityBridge/src/: electron_sdk_unity_bridge.cpp  electron_sdk_unity_bridge.h
4.CAD-Model/: Box.step
5.Docs/_LargeFiles/: _path.txt
6.Tests/TestDisplayUSB/ElectronBotSDK-LowLevel/: CMakeLists.txt
6.Tests/TestDisplayUSB/ElectronBotSDK-LowLevel/lib/: USBInterface.lib
6.Tests/TestDisplayUSB/ElectronBotSDK-LowLevel/src/: electron_low_level.cpp  electron_low_level.h  sample.cpp
(+325 files in other folders)
